tests/error/comptime_arg_errors/left_to_right.py
from guppylang import guppy
from guppylang.std.builtins import nat, comptime, array


@guppy
def main(xs: "array[int, num]", num: nat @comptime) -> None:
    pass


main.compile(entrypoint=False)
