tests/error/comptime_arg_errors/left_to_right.err
Error: Variable not defined (at $FILE:6:25)
  | 
4 | 
5 | @guppy
6 | def main(xs: "array[int, num]", num: nat @comptime) -> None:
  |                          ^^^ `num` is not defined

Guppy compilation failed due to 1 previous error
